# stock-analysis-agent

./: .env.example  .gitignore  .gitmodules  Makefile  README.md  langgraph.json  pyproject.toml  pyrightconfig.json  stock-analysis-agent.excalidraw
src/external_llm/: __init__.py  clients.py
src/fundamentals_agent/: __init__.py  fundamentals.py  graph.py  llm.py  llm_clients.py  metrics.py  report_formatting.py
src/simple_agent/: __init__.py  graph.py
tests/: __init__.py  conftest.py  report_checks.py  verify_test_artifacts.py
tests/integration_tests/: test_graph.py  test_live_llm.py
tests/unit_tests/: test_configuration.py  test_llm.py  test_llm_clients.py
